# hw1

./: README.md  output.csv  pyproject.toml  requirements.txt  requirements.txt.txt  testing_data.csv  trader.py  測試指令.txt
